tidy up css and inconsistencies, fix formatting with height 100vh and overflow auto

--- a/src/pages/crew/styles.module.css
+++ b/src/pages/crew/styles.module.css
@@ -1,18 +1,13 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
 .content {
-  background-image: url("/assets/destination/background-destination-mobile.jpg");
+  background-image: url("/assets/crew/background-crew-mobile.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
   text-align: center;
   padding: 5.5rem 1.5rem 3rem;
-  height: 100%;
+  height: 100vh;
+  overflow: auto;
 }
 
 .textContainer {
@@ -107,12 +102,12 @@
 
 @media (768px <= width <= 1439px) {
   .content {
-    background-image: url("/assets/destination/background-destination-tablet.jpg");
+    background-image: url("/assets/crew/background-crew-tablet.jpg");
   }
 }
 
 @media (1440px <= width) {
   .content {
-    background-image: url("/assets/destination/background-destination-desktop.jpg");
+    background-image: url("/assets/crew/background-crew-desktop.jpg");
   }
 }
