--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -1,9 +1,3 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
 .content {
   background-image: url("/assets/home/background-home-mobile.jpg");
   background-repeat: no-repeat;
@@ -17,6 +11,12 @@
   text-align: center;
   padding: 7rem 1.5rem 3rem;
   height: 100vh;
+  overflow: auto;
+}
+
+.textContainer {
+  display: flex;
+  flex-direction: column;
 }
 
 .intro {
