--- a/src/pages/technology/styles.module.css
+++ b/src/pages/technology/styles.module.css
@@ -1,22 +1,27 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  gap: 2rem;
 }
 
 .content {
-  background-image: url("/assets/destination/background-destination-mobile.jpg");
+  background-image: url("/assets/technology/background-technology-mobile.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
   text-align: center;
-  padding: 7rem 1.5rem 3rem;
+  padding: 5.5rem 1.5rem 3rem;
   height: 100%;
+}
+
+.dirIndex {
+  font-family: "Barlow Condensed", sans-serif;
+  color: #ffffff;
+  font-weight: bold;
+  opacity: 0.25;
+  letter-spacing: 3px;
+  margin-right: 1rem;
 }
 
 .intro {
@@ -31,11 +36,15 @@
   margin: 0 auto;
 }
 
+.textContainer {
+}
+
 .title {
   font-family: "Bellefair", serif;
-  font-size: 80px;
+  font-size: 56px;
   font-weight: normal;
   color: white;
+  line-height: normal;
 }
 
 .text {
@@ -46,21 +55,116 @@
 }
 
 .navbarDestination {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  justify-content: center;
+  z-index: 1;
+}
+
+.btnNav {
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  background-color: transparent;
+  border: none;
+  color: #d0d6f9;
+  letter-spacing: 2px;
+  padding: 0;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+}
+
+.btnNavActive {
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  background-color: transparent;
+  border: none;
+  color: #ffffff;
+  letter-spacing: 2px;
+  padding: 0;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+}
+
+.btnNavActiveBar {
+  width: 100%;
+  height: 3px;
+  background-color: #ffffff;
+  position: absolute;
+  top: 1.75rem;
+  left: 0;
+  z-index: 1;
+}
+
+/* .btnNav:hover {
+  color: #ffffff;
+}
+
+.btnNav:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 3px;
+  top: 1.75rem;
+  left: 0;
+  background-color: white;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.btnNavActive {
+  color: #ffffff;
+}
+
+.btnNav:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+} */
+
+.hRule {
+  width: 100%;
+  height: 1px;
+  margin: 0;
+  color: #383b4b;
+}
+
+.details {
+  font-family: "Bellefair", serif;
+  font-size: 1.75rem;
+  font-weight: normal;
   color: white;
 }
 
-.bio {
-  color: white;
+.detailsPair {
+}
+
+.detailLabel {
+  color: #d0d6f9;
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  letter-spacing: 2px;
+}
+
+.detailsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 @media (768px <= width <= 1439px) {
   .content {
-    background-image: url("/assets/destination/background-destination-tablet.jpg");
+    background-image: url("/assets/technology/background-technology-tablet.jpg");
   }
 }
 
 @media (1440px <= width) {
   .content {
-    background-image: url("/assets/destination/background-destination-desktop.jpg");
+    background-image: url("/assets/technology/background-technology-desktop.jpg");
   }
 }
